--- a/overrides/home.html
+++ b/overrides/home.html
@@ -18,16 +18,6 @@
         background: conic-gradient(from 225deg at 60% 50%, rgb(255, 255, 255), rgba(0, 0, 0, 0.1), #e5890536, rgb(206, 206, 206, 0.15));
     }
 
-    .tx-container-2 {
-        padding-top: .0rem;
-        background: linear-gradient(0deg, transparent, #e5890536, transparent);
-    }
-
-    .tx-container-3 {
-        padding-top: .0rem;
-        background: linear-gradient(191deg, transparent, #fdf7ef, transparent);
-    }
-
     .tx-hero {
         margin: 32px 2.8rem;
         justify-content: center;
@@ -346,7 +336,7 @@
 </style>
 
 <!-- Main site Entry button descriptions -->
-<section class="tx-container-2">
+<section>
     <div class="md-grid md-typeset">
         <div class="tx-hero">
             <div class="tx-hero__image">
@@ -373,9 +363,6 @@
             <div class="mdx-expect">
                 <ul class="mdx-expect__list">
                     <li class="mdx-expect__item md-typeset">
-                        <div class="mdx-expect__icon">
-                            {% include ".icons/fontawesome/solid/users.svg" %}
-                        </div>
                         <div class="mdx-expect__description">
                             <h2>Who we are?</h2>
                             <p>We at codbex provide an innovative approach for building, deploying, selling and
@@ -383,9 +370,6 @@
                         </div>
                     </li>
                     <li class="mdx-expect__item md-typeset">
-                        <div class="mdx-expect__icon">
-                            {% include ".icons/fontawesome/solid/headset.svg" %}
-                        </div>
                         <div class="mdx-expect__description">
                             <h2>What do we provide?</h2>
                             <p>We at codbex offer an unique high-productivity application platform foundation for our
@@ -395,9 +379,6 @@
                         </div>
                     </li>
                     <li class="mdx-expect__item md-typeset">
-                        <div class="mdx-expect__icon">
-                            {% include ".icons/fontawesome/solid/code.svg" %}
-                        </div>
                         <div class="mdx-expect__description">
                             <h2>Developers</h2>
                             <p>Developers need a platform providing powerful tooling, scallable infrastructure and a
@@ -405,9 +386,6 @@
                         </div>
                     </li>
                     <li class="mdx-expect__item md-typeset">
-                        <div class="mdx-expect__icon">
-                            {% include ".icons/fontawesome/regular/building.svg" %}
-                        </div>
                         <div class="mdx-expect__description">
                             <h2>Enterprises</h2>
                             <p>Enterprises looking for a modern, extendable and secure cloud applications for their
@@ -415,9 +393,6 @@
                         </div>
                     </li>
                     <li class="mdx-expect__item md-typeset">
-                        <div class="mdx-expect__icon">
-                            {% include ".icons/fontawesome/regular/handshake.svg" %}
-                        </div>
                         <div class="mdx-expect__description">
                             <h2>Vendors</h2>
                             <p>Vendors want to build solutions tailored for specific customer’s needs by combining ready
@@ -425,9 +400,6 @@
                         </div>
                     </li>
                     <li class="mdx-expect__item md-typeset">
-                        <div class="mdx-expect__icon">
-                            {% include ".icons/fontawesome/solid/chart-column.svg" %}
-                        </div>
                         <div class="mdx-expect__description">
                             <h2>Resellers</h2>
                             <p>Resellers want to expand their products and services portfolio by promoting and reselling
@@ -440,7 +412,7 @@
     </div>
 </section>
 
-<section class="mdx-parallax__group tx-container-2">
+<section class="mdx-parallax__group">
     <div class="md-content md-grid">
         <div class="md-content__inner">
             <header class="md-typeset">
@@ -538,7 +510,7 @@
     </div>
 </section>
 
-<section class="tx-container-2">
+<section>
     <div class="md-content md-grid">
         <div class="md-content__inner mdx-content__inner">
             <div class="mdx-content__column">
